web/styles/modal.css
/* ... */
.modal__body,
.overlay-content {
    .dropdown-widget-button,
    .dropdown_widget_with_label_wrapper {
        width: var(--modal-input-width);
    }
}

.modal_password_input,
.modal_url_input,
.modal_text_input {
    padding: 4px 6px;
    color: hsl(0deg 0% 33%);
    border-radius: 4px;
    border: 1px solid hsl(0deg 0% 80%);
    box-shadow: inset 0 1px 1px hsl(0deg 0% 0% / 7.5%);
    transition:
        border-color linear 0.2s,
        box-shadow linear 0.2s;
    margin-bottom: 10px;
    /* subtract padding (6px each side) and border (1px each side) */
    width: calc(var(--modal-input-width) - 14px);

    &:focus {
        border-color: hsl(206deg 80% 62% / 80%);
        outline: 0;
        box-shadow:
            inset 0 1px 1px hsl(0deg 0% 0% / 7.5%),
            0 0 8px hsl(206deg 80% 62% / 60%);
    }
}

#create_bot_short_name {
    /* A shorter dropdown width (~200px at 14px em)
       to ensure the email all fits on one line. */
    width: 14em;
}

#add-poll-modal,
#add-todo-modal {
    /* this height allows 3-4 option rows
    to fit in without need for scrolling */
    height: 32.1428em; /* 450px / 14px em */
    overflow: hidden;

    .modal__content {
        flex-grow: 1;

        .simplebar-content {
            box-sizing: border-box;
            height: 100%;
        }
    }

    #add-poll-form,
    #add-todo-form {
        display: flex;
        flex-direction: column;
        overflow: hidden;
        height: 100%;

        .poll-label,
        .todo-label {
            font-weight: bold;
            margin: 5px 0;
        }

        .poll-question-input-container,
        .todo-title-input-container {
            display: flex;
            margin-bottom: 10px;

            #poll-question-input,
            #todo-title-input {
                flex-grow: 1;
            }
        }

        .poll-options-list,
        .todo-options-list {
            margin: 0;
            height: 0;
            overflow: auto;
            flex-grow: 1;

            .option-row {
                list-style-type: none;
                cursor: move;
                margin-top: 10px;
                padding: 0;
                display: flex;
                align-items: center;
                gap: 10px;
                margin-right: 18px;

                .drag-icon {
                    color: hsl(0deg 0% 75%);
                }

                .poll-option-input {
                    /* Overwrite .modal_text_input margin to keep vertical centering. */
                    margin-bottom: 0;
                    flex-grow: 1;
                }

                .todo-input {
                    flex: 1 1 auto;
                    margin-bottom: 0;
                    max-width: 30%;
                }

                .todo-description-container {
                    flex: 1 1 auto;
                    display: flex;
                    min-width: 0;

                    .todo-description-input {
                        flex-grow: 1;
                        margin-bottom: 0;
                    }
                }
            }

            .option-row:first-child {
                margin-top: 0;
            }

            .option-row:last-child {
                cursor: default;

                .delete-option {
                    visibility: hidden;
                }

                .drag-icon {
                    visibility: hidden;
                }
            }
        }

        @media (max-width: $sm_min) {
            .option-row {
                .todo-input {
                    width: 100%;
                    min-width: 90px;
                }

                .todo-description-container {
                    .todo-description-input {
                        width: 100%;
                        min-width: 90px;
                    }
                }
            }
        }
    }
}

#introduce-zulip-view-modal {
    i {
        vertical-align: middle;
    }

    .keyboard-button {
        color: var(--color-hotkey-hint);
        font-size: 0.75em; /* 12px at 16px/em */
        font-weight: 500;
        padding: 0.125em 0.25em; /* 2px 4px at 16px/em */
        border-radius: 3px;
        border: 1px solid var(--color-hotkey-hint);
    }
}

#generate-integration-url-modal {
    #integrations-event-container {
        .integration-all-events-buttons {
            display: flex;
            gap: 10px;
            margin: 5px 0 10px;
        }

        #integrations-event-options {
            .integration-event-wrapper {
                margin: 5px 0;
            }

            .integration-event-name {
                word-break: break-all;
            }
        }
    }
}

#invite_users_option_tabs_container {
    margin-bottom: 20px;
}

#send_later_options {
    .send_later_list {
        margin: 0;
        list-style: none;

        .send_later_option {
            display: flex;
            padding: 3px 15px;

            &:focus,
            &:hover {
                text-decoration: none;
                background-color: hsl(0deg 0% 0% / 20%);
            }
        }
    }
}

.dialog-widget-footer-minor-text {
    font-size: smaller;
    font-style: italic;
    margin-right: auto;
}

#topic-summary-modal {
    width: 45em;
}

